--- a/Cocoa/Base.lproj/Main.storyboard
+++ b/Cocoa/Base.lproj/Main.storyboard
@@ -18,16 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="alB-Bv-F14">
-                                <rect key="frame" x="20" y="90" width="560" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="5WE-a5-NMs"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Zv-Jw-1YT">
                                 <rect key="frame" x="211" y="271" width="178" height="109"/>
                                 <constraints>
@@ -39,20 +29,25 @@
                                     <action selector="post:" destination="8BG-p7-Llp" eventType="touchUpInside" id="D9I-mx-ye6"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DnD-0o-OVx">
+                                <rect key="frame" x="20" y="124" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1Zv-Jw-1YT" firstAttribute="top" secondItem="alB-Bv-F14" secondAttribute="bottom" constant="53" id="3YI-uI-bQf"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="alB-Bv-F14" secondAttribute="trailing" id="59U-ub-JKb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="DnD-0o-OVx" secondAttribute="trailing" id="1FW-FQ-mLQ"/>
                             <constraint firstItem="1Zv-Jw-1YT" firstAttribute="centerX" secondItem="Zkb-pi-cqE" secondAttribute="centerX" id="8A4-Km-7gQ"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="alB-Bv-F14" secondAttribute="leading" id="SR7-7U-Wab"/>
-                            <constraint firstItem="alB-Bv-F14" firstAttribute="top" secondItem="cKh-Oa-aZW" secondAttribute="bottom" constant="26" id="ras-XX-tv5"/>
+                            <constraint firstItem="DnD-0o-OVx" firstAttribute="top" secondItem="cKh-Oa-aZW" secondAttribute="bottom" constant="60" id="Lue-ty-eNt"/>
+                            <constraint firstItem="1Zv-Jw-1YT" firstAttribute="top" secondItem="DnD-0o-OVx" secondAttribute="bottom" constant="117" id="U7n-Hg-ZU7"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="DnD-0o-OVx" secondAttribute="leading" id="taZ-ha-TSH"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="textView" destination="alB-Bv-F14" id="ts3-Ee-NEW"/>
+                        <outlet property="textField" destination="DnD-0o-OVx" id="sMz-z5-rf8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FD0-tJ-saN" userLabel="First Responder" sceneMemberID="firstResponder"/>
